Cannot marshal 'parameter #1': Invalid managed/unmanaged type combination.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,7 +33,7 @@ jobs:
         - name: Show Locale
           run: |
             Get-Culture
-            Get-WinUILanguageOverride
+            # Get-WinUILanguageOverride
             Get-WinSystemLocale
             Get-WinUserLanguageList
             Get-Culture
