Cannot marshal 'parameter #2': Invalid managed/unmanaged type combination.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,6 +35,6 @@ jobs:
             Get-Culture
             # Get-WinUILanguageOverride
             Get-WinSystemLocale
-            Get-WinUserLanguageList
+            # Get-WinUserLanguageList
             Get-Culture
         - run: node main.js
