--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,8 +27,8 @@ jobs:
             Add-WindowsCapability -Online -Name "Language.Basic~~~$locale~0.0.1.0"
             Set-WinUILanguageOverride -Language $locale
             Set-WinSystemLocale -SystemLocale $locale
-            $langList = New-WinUserLanguageList $locale
-            Set-WinUserLanguageList $langList -Force
+            $langList = New-WinUserLanguageList -Language $locale
+            Set-WinUserLanguageList -LanguageList $langList -Force
             Set-Culture $locale
         - name: Show CodePage
           run: chcp
