--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,7 +27,7 @@ jobs:
             Add-WindowsCapability -Online -Name "Language.Basic~~~$locale~0.0.1.0"
             Set-WinUILanguageOverride -Language $locale
             Set-WinSystemLocale -SystemLocale $locale
-            $langList = New-WinUserLanguageList -Language "$locale"
+            $langList = New-WinUserLanguageList -Language "ja-JP"
             Set-WinUserLanguageList -LanguageList $langList -Force
             Set-Culture $locale
         - name: Show CodePage
