--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,6 +23,8 @@ jobs:
         - name: Change locale if needed
           if: ${{ matrix.locale != 'default' }}
           run: |
+            # https://github.com/PowerShell/PowerShellModuleCoverage/issues/18
+            Import-Module -Name International -UseWindowsPowerShell -Verbose
             $locale = "${{ matrix.locale }}"
             Add-WindowsCapability -Online -Name "Language.Basic~~~$locale~0.0.1.0"
             Set-WinUILanguageOverride -Language $locale
