--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,11 +26,11 @@ jobs:
             # https://github.com/PowerShell/PowerShellModuleCoverage/issues/18
             Import-Module -Name International -UseWindowsPowerShell -Verbose
             $locale = "${{ matrix.locale }}"
-            Add-WindowsCapability -Online -Name "Language.Basic~~~$locale~0.0.1.0"
-            Set-WinUILanguageOverride -Language $locale
+            # Add-WindowsCapability -Online -Name "Language.Basic~~~$locale~0.0.1.0"
+            # Set-WinUILanguageOverride -Language $locale
             Set-WinSystemLocale -SystemLocale $locale
-            Set-WinUserLanguageList ja-JP -Force
-            Set-Culture $locale
+            # Set-WinUserLanguageList ja-JP -Force
+            # Set-Culture $locale
         - name: Show CodePage
           run: chcp
         - name: Show Locale
